syntax = "proto3";

package pb;

import "xchain.proto";

// rpc api
service EventService {
  rpc Subscribe (SubscribeRequest) returns (stream Event);
}

enum SubscribeType {
  // 区块事件，payload为BlockFilter
  BLOCK = 0;
}

message SubscribeRequest {
  SubscribeType type = 1;
  bytes filter = 2;
}

message Event {
  bytes payload = 1;
}

message BlockRange {
  string start = 1;
  string end = 2;
}

message BlockFilter {
  string bcname = 1;
  BlockRange range = 2;
  bool exclude_tx = 3;
  bool exclude_tx_event = 4;
  string contract = 10;
  string event_name = 11;
  string initiator = 12;
  string auth_require = 13;
  string from_addr = 14;
  string to_addr = 15;
}

message FilteredTransaction {
  string txid = 1;
  repeated ContractEvent events = 2;
}

message FilteredBlock {
  string bcname = 1;
  string blockid = 2;
  int64 block_height = 3; 
  repeated FilteredTransaction txs = 4;
}

message Logs {
    repeated Event events = 1;
}


